src/test/c/reject/20-lambda-call-inline.arcx
result = (a: int, b: int) { return; }(); 